--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.0'
     id 'io.spring.dependency-management' version '1.1.0'
+    id "net.bytebuddy.byte-buddy-gradle-plugin" version "1.14.0"
 }
 
 group = 'kdg.be'
@@ -19,9 +20,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
@@ -32,8 +30,6 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
-    // https://mavenlibs.com/maven/dependency/org.postgresql/postgresql
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
     // https://mvnrepository.com/artifact/org.json/json
     implementation group: 'org.json', name: 'json', version: '20220924'
     // https://mvnrepository.com/artifact/org.jooq/jooq
