--- a/build.gradle
+++ b/build.gradle
@@ -14,44 +14,24 @@ repositories {
 }
 
 dependencies {
-    //    spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
-
-//    model mapper
     implementation "org.modelmapper:modelmapper:3.1.1"
-
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'au.com.dius.pact.provider:junit5spring:4.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.security:spring-security-config:6.0.2'
-    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    // https://mvnrepository.com/artifact/org.webjars/jquery
-    implementation group: 'org.webjars', name: 'jquery', version: '3.6.2'
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    //  gson dependency
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:31.1-jre'
-    // https://mvnrepository.com/artifact/org.json/json
     implementation group: 'org.json', name: 'json', version: '20220924'
-    // https://mvnrepository.com/artifact/org.jooq/jooq
     implementation group: 'org.jooq', name: 'jooq', version: '3.17.6'
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.0.0'
-//    bootstrap
-    implementation 'org.webjars:bootstrap:5.1.2'
-    implementation 'org.webjars:webjars-locator:0.42'
+    runtimeOnly 'org.webjars:bootstrap:5.2.3'
+    implementation 'org.webjars:webjars-locator:0.46'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-
-
 }
 
 tasks.named('test') {
