--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,11 @@ dependencies {
     implementation "org.modelmapper:modelmapper:3.1.1"
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'au.com.dius.pact.provider:junit5spring:4.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.security:spring-security-config:6.0.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
@@ -34,7 +35,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
-
