--- a/src/main/resources/application-springData.properties
+++ b/src/main/resources/application-springData.properties
@@ -1,4 +1,5 @@
 
 # Spring-Data configuration
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
