--- a/src/main/resources/application-springData.properties
+++ b/src/main/resources/application-springData.properties
@@ -1,5 +1,4 @@
-
 # Spring-Data configuration
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
