--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-logging.level.kdg.be.spring.proj3 = DEBUG
+logging.level.kdg.be.spring.proj3=DEBUG
 spring.messages.basename=lang/content
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/proj3
-spring.datasource.username= postgres
-spring.datasource.password= Student_1234
+spring.datasource.username=postgres
+spring.datasource.password=Student_1234
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 spring.sql.init.schema-locations=classpath:/schema.sql
-
 #profile chooser
-spring.profiles.active=springData
+spring.profiles.active=dev
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
