--- a/build.gradle
+++ b/build.gradle
@@ -17,25 +17,27 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'org.projectlombok:lombok:1.18.26'
 
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
     implementation 'org.springframework.security:spring-security-config:6.0.2'
     implementation "org.modelmapper:modelmapper:3.1.1"
-
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.4'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
     implementation group: 'org.json', name: 'json', version: '20230227'
     implementation group: 'org.jooq', name: 'jooq', version: '3.18.0'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.0.4'
     implementation 'org.webjars:webjars-locator:0.46'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    runtimeOnly 'org.postgresql:postgresql:42.5.4'
+    runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'org.webjars:bootstrap:5.2.3'
 }
 
