--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.messages.basename=lang/content
 spring.datasource.url=jdbc:postgresql://localhost:5432/proj3
 spring.datasource.username=postgres
 spring.datasource.password=Student_1234
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
-spring.sql.init.schema-locations=classpath:/schema.sql
-#profile chooser
-spring.profiles.active=dev
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.data-locations=classpath:sql/data.sql
+spring.sql.init.mode=always
+spring.thymeleaf.cache=false
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+
+
