--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'org.projectlombok:lombok:1.18.26'
 
-    implementation 'org.springframework.security:spring-security-config:6.0.2'
+    implementation 'org.springframework.security:spring-security-config'
     implementation "org.modelmapper:modelmapper:3.1.1"
 
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-    implementation group: 'org.json', name: 'json', version: '20230227'
-    implementation group: 'org.jooq', name: 'jooq', version: '3.18.0'
+    implementation 'com.google.code.gson:gson'
+    implementation 'org.json:json:20230227'
     implementation 'org.webjars:webjars-locator:0.46'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
