implemented npm, eslint, sass. (contains errors)

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.0.0'
     id 'io.spring.dependency-management' version '1.1.0'
     id "net.bytebuddy.byte-buddy-gradle-plugin" version "1.14.0"
+    id 'com.github.node-gradle.node' version '4.0.0'
 }
 
 group = 'kdg.be'
@@ -12,6 +13,8 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
 }
+
+processResources.dependsOn npm_run_build
 
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
@@ -37,7 +40,6 @@ dependencies {
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     runtimeOnly 'org.postgresql:postgresql'
-    runtimeOnly 'org.webjars:bootstrap:5.2.3'
 }
 
 test {
