--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,51 @@
 build
 
 bin/
+
+# Ignore Node.js dependency directory (used by npm and yarn)
+node_modules/
+src/main/resources/static/js/
+src/main/resources/static/css/
+
+db/
+
+# Ignore log files and other temporary files
+*.log
+tmp/
+temp/
+
+### VS Code ###
+.vscode/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
