--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.sql.init.mode=always
 spring.thymeleaf.cache=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
 
 
