bug fixes. stopped using .then used asyc/await.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.password=Student_1234
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.data-locations=classpath:sql/data.sql
 spring.sql.init.mode=always
-spring.thymeleaf.cache=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 
 
