--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://gitlab.com/kdg-ti/programming-5/projects-22-23/paul.ashioya/programming-5#readme",
   "devDependencies": {
-    "eslint": "^8.39.0",
     "css-loader": "^6.7.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -29,6 +28,7 @@
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5"
   }
 }
