--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ plugins {
     id 'com.github.node-gradle.node' version '4.0.0'
 }
 
+bootRun {
+    dependsOn 'executeInitDatabaseScript'
+}
+
+tasks.register('executeInitDatabaseScript', Exec) {
+    commandLine './initdatabase.sh'
+}
+
 group = 'kdg.be'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
