--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.5"
+    "bootstrap-icons": "^1.10.5",
+    "lodash": "^4.17.21",
+    "validator": "^13.9.0"
   }
 }
