--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 logging.level.kdg.be.spring.proj3=DEBUG
 spring.messages.basename=lang/content
-spring.datasource.url=jdbc:postgresql://localhost:5432/proj3
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Student_1234
+spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.data-locations=classpath:sql/data.sql
 spring.sql.init.mode=always
@@ -11,5 +11,3 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-
-
