--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 logging.level.kdg.be.spring.proj3=DEBUG
 spring.messages.basename=lang/content
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_proj
+spring.datasource.username=spring_proj
+spring.datasource.password=spring_proj
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.data-locations=classpath:sql/data.sql
 spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
